--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#Slide one" class="active"><img src="img\home.svg" alt=""></a>
         <a href="#Slide two"><img src="img\portfolio.svg" alt=""></a>
         <a href="#Slide three"><img src="img\history.svg" alt=""></a>
-        <a href="#Slide four"><img src="img\Skills.svg" alt=""></a>
+        <a href="#Slide four"><img src="img\Skills.svg" alt="" id="skills"></a>
       </div>
     </nav>
   </header>
@@ -45,7 +45,6 @@
             <h2>Projet : Développeur Python</h2>
           </div>
           <div id="div">
-            <p class="text">Télécharger en format papier.</p>
             <div id="download">
               <a href="img\CV TEST (1).pdf" download target="_blank">
                 <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
@@ -112,32 +111,31 @@
             <ellipse class="cls-1 svg-elem-13" cx="141.65" cy="137.39" rx="140.15" ry="135.89"></ellipse>
           </svg>
 
-          <div class="phone">
-            <img src="img\iconmonstr-mobile-thin.svg" alt="Phone">
-            <a href="tel:0625957880">  0625957880  </a>
-          </div>
-          <div class="mail">
-            <img src="img\iconmonstr-mail-thin.svg" alt="mail">
-            <a href="mailto:maxencemonnier@gmail.com">  maxencemonnier@gmail.com  </a>
+          <section>
+            <div class="phone">
+              <!-- <img src="img\iconmonstr-mobile-thin.svg" alt="Phone"> -->
+              <a href="tel:0625957880">  0625957880  </a>
+            </div>
+            <div class="mail">
+              <!-- <img src="img\iconmonstr-mail-thin.svg" alt="mail"> -->
+              <a href="mailto:maxencemonnier@gmail.com">  maxencemonnier@gmail.com  </a>
 
-          </div>
-          <div class="website">
-            <img src="img\github.svg" alt="website">
-            <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  Mon Profil Github  </a>
-          </div>
-          <div class="permis">
+            </div>
+            <div class="website">
+              <!-- <img src="img\github.svg" alt="website"> -->
+              <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  Mon Profil Github  </a>
+            </div>
+            <div class="permis">
 
-            <img src="img\iconmonstr-car-2.svg" alt="car">
-            <p>  Permis B • Véhiculé  </p>
-          </div>
-          <div class="Linkedin">
-            <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin">
-            <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/"
-              target="_blank">  linkedin.com/in/monniermaxence  </a>
-          </div>
-          <div class="machins">
-            <img src="img\trucs qui flottent.svg" alt="ah">
-          </div>
+              <!-- <img src="img\iconmonstr-car-2.svg" alt="car"> -->
+              <p>  Permis B • Véhiculé  </p>
+            </div>
+            <div class="Linkedin">
+              <!-- <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin"> -->
+              <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/"
+                target="_blank">  linkedin.com/in/monniermaxence  </a>
+            </div>
+        </section>
         </section>
       </div>
       <div class="slide two" id="Slide two">
@@ -151,11 +149,9 @@
             </div>
             <div class="gallery-container d-flex align-items-center justify-content-center" id="gallery-container">
 
-              <a data-lg-size="1400-1400" class="gallery-item"
-                data-src="img\Fatzilla.png"
+              <a data-lg-size="1400-1400" class="gallery-item" data-src="img\Fatzilla.png"
                 data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
-                <img class="img-fluid"
-                  src="img\Fatzilla.png" />
+                <img class="img-fluid" src="img\Fatzilla.png" />
               </a>
               <!-- <a data-lg-size="1443-1329" class="gallery-item"
                 data-src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1443&q=80"
