--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
             <ellipse class="cls-1 svg-elem-13" cx="141.65" cy="137.39" rx="140.15" ry="135.89"></ellipse>
           </svg>
 
-          <section>
+          <section id="presentation">
             <div class="phone">
               <!-- <img src="img\iconmonstr-mobile-thin.svg" alt="Phone"> -->
-              <a href="tel:0625957880">  0625957880  </a>
+              <p><a href="tel:0625957880">  0625957880  </a></p>
             </div>
             <div class="mail">
               <!-- <img src="img\iconmonstr-mail-thin.svg" alt="mail"> -->
-              <a href="mailto:maxencemonnier@gmail.com">  maxencemonnier@gmail.com  </a>
+              <p><a href="mailto:maxencemonnier@gmail.com">  maxencemonnier@gmail.com  </a></p>
 
             </div>
             <div class="website">
               <!-- <img src="img\github.svg" alt="website"> -->
-              <a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  Mon Profil Github  </a>
+              <p><a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  Mon Profil Github  </a></p>
             </div>
             <div class="permis">
 
@@ -132,8 +132,8 @@
             </div>
             <div class="Linkedin">
               <!-- <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin"> -->
-              <a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/"
-                target="_blank">  linkedin.com/in/monniermaxence  </a>
+              <p><a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/"
+                target="_blank">  linkedin.com/in/monniermaxence  </a></p>
             </div>
         </section>
         </section>
