--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             <div id="download">
               <a href="img\CV TEST (1).pdf" download target="_blank">
                 <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
-                  <title>download</title>
                   <g id="template">
                     <circle cx="500" cy="202.87" r="43.6" />
                     <path
@@ -262,7 +261,7 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="img\lastelle.jpg" alt="lastouille" style="width:100%;height:100%;">
+                <img src="img\lastelle.png" alt="lastouille" style="width:100%;height:100%;">
               </div>
               <div class="flip-card-back">
                 <div class="shtml">
@@ -300,7 +299,7 @@
           <div class="flip-card2">
             <div class="flip-card-inner2">
               <div class="flip-card-front2">
-                <img src="img\unknown.png" alt="" style="width:100%;height:100%;">
+                <img src="img\crever.png" alt="" style="width:100%;height:100%;">
               </div>
               <div class="flip-card-back2">
                 <ul>
@@ -308,7 +307,7 @@
                   <li>Travail en Équipe</li>
                   <li>Gestion de Conflit</li>
                   <li>Respect & Politesse</li>
-                  <li>Accept des Feedbacks</li>
+                  <li>Acceptation des Feedbacks</li>
                   <li>Responsabilité & Intégrité</li>
                   <li>Volonté d'Apprendre</li>
                   <li>Curiosité</li>
