--- a/index english.html
+++ b/index english.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css\style.css">
   <link rel="stylesheet" href="https://use.typekit.net/hrk3qou.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="js/button.js"></script>
@@ -26,10 +26,10 @@
   <header>
     <nav>
       <div class="navbar">
-        <a href="#Slide one" class="active"><img src="img/home.svg" alt=""></a>
-        <a href="#Slide two"><img src="img/portfolio.svg" alt=""></a>
-        <a href="#Slide three"><img src="img/history.svg" alt=""></a>
-        <a href="#Slide four"><img src="img/Skills.svg" alt="" id="skills"></a>
+        <a href="#Slide one" class="active"><img src="img\home.svg" alt=""></a>
+        <a href="#Slide two"><img src="img\portfolio.svg" alt=""></a>
+        <a href="#Slide three"><img src="img\history.svg" alt=""></a>
+        <a href="#Slide four"><img src="img\Skills.svg" alt="" id="skills"></a>
       </div>
     </nav>
   </header>
@@ -41,15 +41,15 @@
       <div class="slide one" id="Slide one">
         <section class="Intro">
           <section id="langage_switch">
-            <a href="index english.html"><img src="img/united-kingdom.svg" alt="Drapeau Englais pour changer de langue"></a>
+            <a href="index.html"><img src="img/frenchflagframed.svg" alt="French Flag to change language"></a>
           </section>
           <div class="Nom">
             <H1>Maxence Monnier</H1>
-            <h2>Projet : Développeur Python</h2>
+            <h2>Project : Python Dev</h2>
           </div>
           <div id="div">
             <div id="download">
-              <a href="img/CV TEST (1).pdf" download target="_blank">
+              <a href="img\CV TEST (1).pdf" download target="_blank">
                 <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
                   <g id="template">
                     <circle cx="500" cy="202.87" r="43.6" />
@@ -115,26 +115,26 @@
 
           <section id="presentation">
             <div class="phone">
-              <!-- <img src="img/iconmonstr-mobile-thin.svg" alt="Phone"> -->
+              <!-- <img src="img\iconmonstr-mobile-thin.svg" alt="Phone"> -->
               <p><a href="tel:0625957880">  0625957880  </a></p>
             </div>
             <div class="mail">
-              <!-- <img src="img/iconmonstr-mail-thin.svg" alt="mail"> -->
+              <!-- <img src="img\iconmonstr-mail-thin.svg" alt="mail"> -->
               <p><a href="mailto:maxencemonnier@gmail.com">  maxencemonnier@gmail.com  </a></p>
 
             </div>
             <div class="website">
-              <!-- <img src="img/github.svg" alt="website"> -->
-              <p><a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  Mon Profil Github  </a></p>
+              <!-- <img src="img\github.svg" alt="website"> -->
+              <p><a href="https://github.com/MaxenceMonnier?tab=repositories" target="_blank">  My GitHub Profile  </a></p>
             </div>
             <div class="Linkedin">
-              <!-- <img src="img/icons8-linkedin-2 (1).svg" alt="Linkedin"> -->
+              <!-- <img src="img\icons8-linkedin-2 (1).svg" alt="Linkedin"> -->
               <p><a href="https://www.linkedin.com/in/maxence-monnier-522bb221a/"
-                target="_blank">  Mon profil Linkedin  </a></p>
+                target="_blank">  My LinkedIn account  </a></p>
                 <div class="permis">
 
-                  <!-- <img src="img/iconmonstr-car-2.svg" alt="car"> -->
-                  <p>  Permis B • Véhiculé  </p>
+                  <!-- <img src="img\iconmonstr-car-2.svg" alt="car"> -->
+                  <p>  French Driving Licence Category B  </p>
                 </div>
             </div>
         </section>
@@ -146,14 +146,14 @@
             <div class="header d-flex flex-column align-items-center">
               <h1 class="display-6 mt-3 mb-0">Portfolio</h1>
               <p class="lead mt-2 mb-4">
-                Voici mes projets.
+                Here's a preview of my projects.
               </p>
             </div>
             <div class="gallery-container d-flex align-items-center justify-content-center" id="gallery-container">
 
-              <a data-lg-size="1400-1400" class="gallery-item" data-src="img/Fatzilla.png"
+              <a data-lg-size="1400-1400" class="gallery-item" data-src="img\Fatzilla.png"
                 data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
-                <img class="img-fluid" src="img/Fatzilla.png" />
+                <img class="img-fluid" src="img\Fatzilla.png" />
               </a>
               <!-- <a data-lg-size="1443-1329" class="gallery-item"
                 data-src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1443&q=80"
@@ -204,15 +204,15 @@
           <div id="timeline-content">
             <ul class="timeline">
               <li class="event" data-date="2018">
-                <h3>Obtention du Baccalauréat.</h3>
-                <p>Spécialité Littéraire, option Anglais Renforcé.</p>
+                <h3>High-School Diploma</h3>
+                <p>Literary oriented, English focused.</p>
               </li>
               <li class="event" data-date="2018-2020">
-                <h3>Licence LLCER Anglais.</h3>
-                <p>Université Lille 3.</p>
+                <h3>University.</h3>
+                <p>University Lille 3. LLCER in English</p>
               </li>
               <li class="event" id="date" data-date="2019 - Aujourd'hui">
-                <h3>Modérateur • Bénévolat.</h3>
+                <h3>Moderator • Volunteer.</h3>
                 <p>Modérateur, Médiateur Social d'une communauté internationale en ligne, exclusivement en Anglais.</p>
               </li>
 
@@ -264,36 +264,36 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="img/lastelle.png" alt="lastouille" style="width:100%;height:100%;">
+                <img src="img\lastelle.png" alt="lastouille" style="width:100%;height:100%;">
               </div>
               <div class="flip-card-back">
                 <div class="shtml">
-                  <img src="img/HTML vector.svg" alt="html">
+                  <img src="img\HTML vector.svg" alt="html">
                 </div>
                 <div class="css">
-                  <img src="img/CSS vector.svg" alt="css">
+                  <img src="img\CSS vector.svg" alt="css">
                 </div>
                 <div class="photoshop">
-                  <img src="img/icons8-adobe-photoshop.svg" alt="photoshop">
+                  <img src="img\icons8-adobe-photoshop.svg" alt="photoshop">
                 </div>
                 <div class="vcode">
-                  <img src="img/icons8-visual-studio-code-2019.svg" alt="visual code">
+                  <img src="img\icons8-visual-studio-code-2019.svg" alt="visual code">
                 </div>
                 <div class="wordpress">
-                  <img src="img/wordpress.svg" alt="wordpress">
+                  <img src="img\wordpress.svg" alt="wordpress">
                 </div>
                 <div class="office">
-                  <img src="img/icons8-office-365.svg" alt="Pack Office">
+                  <img src="img\icons8-office-365.svg" alt="Pack Office">
                 </div>
                 <div class="jack">
                   <!-- <p>Bilingue, Niveau C2, quotidiennement pratiqué.</p> -->
-                  <img src="img/united-kingdom.svg" alt="Union Jack">
+                  <img src="img\united-kingdom.svg" alt="Union Jack">
                 </div>
                 <div class="git">
-                  <img src="img/git-scm-icon.svg" alt="git">
+                  <img src="img\git-scm-icon.svg" alt="git">
                 </div>
                 <div class="canva">
-                  <img src="img/canva-1.svg" alt="">
+                  <img src="img\canva-1.svg" alt="">
                 </div>
               </div>
             </div>
@@ -302,7 +302,7 @@
           <div class="flip-card2">
             <div class="flip-card-inner2">
               <div class="flip-card-front2">
-                <img src="img/crever.png" alt="" style="width:100%;height:100%;">
+                <img src="img\crever.png" alt="" style="width:100%;height:100%;">
               </div>
               <div class="flip-card-back2">
                 <ul>
