--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
                   <img src="img/icons8-visual-studio-code-2019.svg" alt="visual code">
                 </div>
                 <div class="wordpress">
-                  <img src="img/wordpress.svg" alt="wordpress">
+                  <img src="img/wordpress.svg" alt="wordpresss">
                 </div>
                 <div class="office">
                   <img src="img/icons8-office-365.svg" alt="Pack Office">
                 </div>
                 <div class="jack">
-                  <!-- <p>Bilingue, Niveau C2, quotidiennement pratiqué.</p> -->
+                  
                   <img src="img/united-kingdom.svg" alt="Union Jack">
                 </div>
                 <div class="git">
