--- a/index.html
+++ b/index.html
@@ -87,13 +87,24 @@
               </a>
             </div>
           </div>
-          <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;" xml:space="preserve" width="395.5" height="396.6000061035156">
+          <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;"
+            xml:space="preserve" width="395.5" height="396.6000061035156">
             <style type="text/css">
-              .st0{fill:#5E8233;}
-              .st1{fill:none;stroke:#5E8233;stroke-width:8;stroke-miterlimit:10;}
+              .st0 {
+                fill: #5E8233;
+              }
+
+              .st1 {
+                fill: none;
+                stroke: #5E8233;
+                stroke-width: 8;
+                stroke-miterlimit: 10;
+              }
             </style>
             <g>
-              <path class="st0 svg-elem-1" d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
+              <path class="st0 svg-elem-1"
+                d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
                 c-8.7,2.3-7.1,8.4-14.6,12.5c-10.3,10-43.7,53.6-2.2,35.9c-7.8,14.3-97.6,73.9-81.8,23.3c2.9-12.5,20.2-22.4,32.2-30.7
                 c-23.6,1.2-50.2,26.6-42.6,48.2c31.3,19.7,85.3-20.3,106.2-43.2c51.8-39.4,90.5-103.3,44.7,3.6c-7.6,29.3-69.5,148-18.3,144
                 C141.7,381.5,287.9,132.9,233.4,161.9z M174.1,209.7c-2.9,10.7-15.6,30.7-31.8,29.7C144.5,230.3,175.1,179.5,174.1,209.7z"></path>
@@ -103,9 +114,10 @@
                   c-19.1,26.9-15.6,30.6-13.8,61.3c2.1,3.1,1.7,9.5,2.1,14c2.9,6,16.4,17.5,24.5,14.1C230.4,179.6,298.4,69.8,298.4,35.8z
                    M215,118.6c-23.1,14.7-30.1,12-8.2-9.9C212.7,94,231.4,105.8,215,118.6z"></path>
               </g>
-              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z"></path>
+              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z">
+              </path>
             </g>
-            </svg>
+          </svg>
 
           <section id="presentation">
             <div class="phone">
@@ -164,13 +176,24 @@
               </a> -->
             </div>
           </div>
-          <svg version="1.1" id="Calque_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;" xml:space="preserve" width="395.5" height="396.6000061035156">
+          <svg version="1.1" id="Calque_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;"
+            xml:space="preserve" width="395.5" height="396.6000061035156">
             <style type="text/css">
-              .st0{fill:#5E8233;}
-              .st1{fill:none;stroke:#5E8233;stroke-width:8;stroke-miterlimit:10;}
+              .st0 {
+                fill: #5E8233;
+              }
+
+              .st1 {
+                fill: none;
+                stroke: #5E8233;
+                stroke-width: 8;
+                stroke-miterlimit: 10;
+              }
             </style>
             <g>
-              <path class="st0 svg-elem-1" d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
+              <path class="st0 svg-elem-1"
+                d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
                 c-8.7,2.3-7.1,8.4-14.6,12.5c-10.3,10-43.7,53.6-2.2,35.9c-7.8,14.3-97.6,73.9-81.8,23.3c2.9-12.5,20.2-22.4,32.2-30.7
                 c-23.6,1.2-50.2,26.6-42.6,48.2c31.3,19.7,85.3-20.3,106.2-43.2c51.8-39.4,90.5-103.3,44.7,3.6c-7.6,29.3-69.5,148-18.3,144
                 C141.7,381.5,287.9,132.9,233.4,161.9z M174.1,209.7c-2.9,10.7-15.6,30.7-31.8,29.7C144.5,230.3,175.1,179.5,174.1,209.7z"></path>
@@ -180,9 +203,10 @@
                   c-19.1,26.9-15.6,30.6-13.8,61.3c2.1,3.1,1.7,9.5,2.1,14c2.9,6,16.4,17.5,24.5,14.1C230.4,179.6,298.4,69.8,298.4,35.8z
                    M215,118.6c-23.1,14.7-30.1,12-8.2-9.9C212.7,94,231.4,105.8,215,118.6z"></path>
               </g>
-              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z"></path>
+              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z">
+              </path>
             </g>
-            </svg>
+          </svg>
         </section>
       </div>
       <div class="slide three" id="Slide three">
@@ -219,13 +243,24 @@
               </li>
             </ul>
           </div>
-          <svg version="1.1" id="Calque_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;" xml:space="preserve" width="395.5" height="396.6000061035156">
+          <svg version="1.1" id="Calque_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;"
+            xml:space="preserve" width="395.5" height="396.6000061035156">
             <style type="text/css">
-              .st0{fill:#5E8233;}
-              .st1{fill:none;stroke:#5E8233;stroke-width:8;stroke-miterlimit:10;}
+              .st0 {
+                fill: #5E8233;
+              }
+
+              .st1 {
+                fill: none;
+                stroke: #5E8233;
+                stroke-width: 8;
+                stroke-miterlimit: 10;
+              }
             </style>
             <g>
-              <path class="st0 svg-elem-1" d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
+              <path class="st0 svg-elem-1"
+                d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
                 c-8.7,2.3-7.1,8.4-14.6,12.5c-10.3,10-43.7,53.6-2.2,35.9c-7.8,14.3-97.6,73.9-81.8,23.3c2.9-12.5,20.2-22.4,32.2-30.7
                 c-23.6,1.2-50.2,26.6-42.6,48.2c31.3,19.7,85.3-20.3,106.2-43.2c51.8-39.4,90.5-103.3,44.7,3.6c-7.6,29.3-69.5,148-18.3,144
                 C141.7,381.5,287.9,132.9,233.4,161.9z M174.1,209.7c-2.9,10.7-15.6,30.7-31.8,29.7C144.5,230.3,175.1,179.5,174.1,209.7z"></path>
@@ -235,9 +270,10 @@
                   c-19.1,26.9-15.6,30.6-13.8,61.3c2.1,3.1,1.7,9.5,2.1,14c2.9,6,16.4,17.5,24.5,14.1C230.4,179.6,298.4,69.8,298.4,35.8z
                    M215,118.6c-23.1,14.7-30.1,12-8.2-9.9C212.7,94,231.4,105.8,215,118.6z"></path>
               </g>
-              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z"></path>
+              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z">
+              </path>
             </g>
-            </svg>
+          </svg>
         </section>
       </div>
       <div class="slide four" id="Slide four">
@@ -267,7 +303,7 @@
                   <img src="img/icons8-office-365.svg" alt="Pack Office">
                 </div>
                 <div class="jack">
-                  
+
                   <img src="img/united-kingdom.svg" alt="Union Jack">
                 </div>
                 <div class="git">
@@ -300,30 +336,42 @@
               </div>
             </div>
           </div>
-<!--?xml version="1.0" encoding="utf-8"?-->
-<!-- Generator: Adobe Illustrator 27.7.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<!--?xml version="1.0" encoding="utf-8"?-->
-<!-- Generator: Adobe Illustrator 27.7.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Calque_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;" xml:space="preserve" width="395.5" height="396.6000061035156">
-  <style type="text/css">
-    .st0{fill:#5E8233;}
-    .st1{fill:none;stroke:#5E8233;stroke-width:8;stroke-miterlimit:10;}
-  </style>
-  <g>
-    <path class="st0 svg-elem-1" d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
+          <!--?xml version="1.0" encoding="utf-8"?-->
+          <!-- Generator: Adobe Illustrator 27.7.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+          <!--?xml version="1.0" encoding="utf-8"?-->
+          <!-- Generator: Adobe Illustrator 27.7.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+          <svg version="1.1" id="Calque_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 395.5 396.6" style="enable-background:new 0 0 395.5 396.6;"
+            xml:space="preserve" width="395.5" height="396.6000061035156">
+            <style type="text/css">
+              .st0 {
+                fill: #5E8233;
+              }
+
+              .st1 {
+                fill: none;
+                stroke: #5E8233;
+                stroke-width: 8;
+                stroke-miterlimit: 10;
+              }
+            </style>
+            <g>
+              <path class="st0 svg-elem-1"
+                d="M233.4,161.9c-3.5,13.7-14.8,17.8-23.5,28.2c1.7,7.1-14,9.3-16.2,15.5c-24.6,25.4,5.5-24-25.8-11.4
       c-8.7,2.3-7.1,8.4-14.6,12.5c-10.3,10-43.7,53.6-2.2,35.9c-7.8,14.3-97.6,73.9-81.8,23.3c2.9-12.5,20.2-22.4,32.2-30.7
       c-23.6,1.2-50.2,26.6-42.6,48.2c31.3,19.7,85.3-20.3,106.2-43.2c51.8-39.4,90.5-103.3,44.7,3.6c-7.6,29.3-69.5,148-18.3,144
       C141.7,381.5,287.9,132.9,233.4,161.9z M174.1,209.7c-2.9,10.7-15.6,30.7-31.8,29.7C144.5,230.3,175.1,179.5,174.1,209.7z"></path>
-    <g>
-      <path class="st0 svg-elem-2" d="M298.4,35.8c-23.5,12.3-31.2,53.1-65.2,69.3c-14-44.5-101.8,67.6-25.1,23.4c17.1-10.4-16.3,34-19.5,36.1
+              <g>
+                <path class="st0 svg-elem-2" d="M298.4,35.8c-23.5,12.3-31.2,53.1-65.2,69.3c-14-44.5-101.8,67.6-25.1,23.4c17.1-10.4-16.3,34-19.5,36.1
         c-14,22.2-52.7,33.6-66.6,47.9c16.3,0.8,25.6-10.8,40.4-15.2c26.3-18.4,52.8-43.9,63.9-75c22.5-19.9,60.2-62.4,32.4-1.3
         c-19.1,26.9-15.6,30.6-13.8,61.3c2.1,3.1,1.7,9.5,2.1,14c2.9,6,16.4,17.5,24.5,14.1C230.4,179.6,298.4,69.8,298.4,35.8z
          M215,118.6c-23.1,14.7-30.1,12-8.2-9.9C212.7,94,231.4,105.8,215,118.6z"></path>
-    </g>
-    <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z"></path>
-  </g>
-  </svg>
-  
+              </g>
+              <path class="st1 svg-elem-3" d="M390,198.9c3.6,248.8-387.1,248.8-383.5,0C2.9-49.9,393.7-49.9,390,198.9z">
+              </path>
+            </g>
+          </svg>
+
 
         </section>
       </div>
