Nouveau CV + Frise Chronologique

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
           <div id="div">
             <div id="download">
-              <a href="img/CV TEST (1).pdf" download target="_blank">
+              <a href="img/CV version Papier.pdf" download target="_blank">
                 <svg style="width: 200px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
                   <g id="template">
                     <circle cx="500" cy="202.87" r="43.6" />
@@ -215,30 +215,29 @@
         <section class="Expériences">
           <div id="timeline-content">
             <ul class="timeline">
-              <li class="event" data-date="2018">
-                <h3>Obtention du Baccalauréat.</h3>
-                <p>Spécialité Littéraire, option Anglais Renforcé.</p>
+              <li class="event" data-date="2022 - Aujourd'hui">
+
+                <h3>Employé Polyvalent • Atelier Numérique.</h3>
+
+                <p>Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval.</p>
               </li>
-              <li class="event" data-date="2018-2020">
-                <h3>Licence LLCER Anglais.</h3>
-                <p>Université Lille 3.</p>
+              <li class="event" data-date="2021-2022">
+
+                <h3>Aide Informatique • Service Civique.</h3>
+
+                <p>Médiateur Numérique pour le Pôle Emploi de Condé-sur-l'Escaut.</p>
               </li>
               <li class="event" id="date" data-date="2019 - Aujourd'hui">
                 <h3>Modérateur • Bénévolat.</h3>
                 <p>Modérateur, Médiateur Social d'une communauté internationale en ligne, exclusivement en Anglais.</p>
               </li>
 
-              <li class="event" data-date="2021-2022">
-
-                <h3>Aide Informatique • Service Civique.</h3>
-
-                <p>Médiateur Numérique pour le Pôle Emploi de Condé-sur-l'Escaut.
-                <p>
-              <li class="event" data-date="2022 - Aujourd'hui">
-
-                <h3>Employé Polyvalent • Atelier Numérique.</h3>
-
-                <p>Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval.</p>
+              <li class="event" data-date="2018-2020">
+                <h3>Licence LLCER Anglais.</h3>
+                <p>Université Lille 3.</p>
+                <li class="event" data-date="2018">
+                  <h3>Obtention du Baccalauréat.</h3>
+                  <p>Spécialité Littéraire, option Anglais Renforcé.</p>
 
               </li>
             </ul>
