--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </section>
           <div class="Nom">
             <H1>Maxence Monnier</H1>
-            <h2>Projet : Développeur Python</h2>
+            <!-- <h2>Projet : Développeur Python</h2> -->
           </div>
           <div id="div">
             <div id="download">
