nouveau grid et autres

--- a/index english.html
+++ b/index english.html
@@ -309,6 +309,9 @@
                 <div class="canva">
                   <img src="img/canva-1.svg" alt="">
                 </div>
+                <div class="Figma">
+                  <img src="img/figma-icon.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
