--- a/index english.html
+++ b/index english.html
@@ -281,36 +281,40 @@
                 <img src="img/lastelle.png" alt="lastouille" style="width:100%;height:100%;">
               </div>
               <div class="flip-card-back">
-                <div class="shtml">
-                  <img src="img/HTML vector.svg" alt="html">
-                </div>
-                <div class="css">
-                  <img src="img/CSS vector.svg" alt="css">
-                </div>
-                <div class="photoshop">
-                  <img src="img/icons8-adobe-photoshop.svg" alt="photoshop">
-                </div>
-                <div class="vcode">
-                  <img src="img/icons8-visual-studio-code-2019.svg" alt="visual code">
-                </div>
-                <div class="wordpress">
-                  <img src="img/wordpress.svg" alt="wordpresss">
-                </div>
-                <div class="office">
-                  <img src="img/icons8-office-365.svg" alt="Pack Office">
-                </div>
-                <div class="jack">
-
-                  <img src="img/united-kingdom.svg" alt="Union Jack">
-                </div>
-                <div class="git">
-                  <img src="img/git-scm-icon.svg" alt="git">
-                </div>
-                <div class="canva">
-                  <img src="img/canva-1.svg" alt="">
-                </div>
-                <div class="Figma">
-                  <img src="img/figma-icon.svg" alt="">
+                <div class="container">
+                  <div class="HTML">
+                    <img src="img/HTML vector.svg" alt="html">
+                  </div>
+                  <div class="CSS">
+                    <img src="img/CSS vector.svg" alt="css">
+                  </div>
+                  <div class="JS">
+                    <img src="img/javascript.svg" alt="">
+                  </div>
+                  <div class="Wordpress">
+                    <img src="img/wordpress.svg" alt="wordpresss">
+                  </div>
+                  <div class="Pack-Office">
+                    <img src="img/icons8-office-365.svg" alt="Pack Office">
+                  </div>
+                  <div class="Visual-Code">
+                    <img src="img/icons8-visual-studio-code-2019.svg" alt="visual code">
+                  </div>
+                  <div class="Photoshop">
+                    <img src="img/icons8-adobe-photoshop.svg" alt="photoshop">
+                  </div>
+                  <div class="Canva">
+                    <img src="img/canva-1.svg" alt="">
+                  </div>
+                  <div class="Figma">
+                    <img src="img/figma-icon.svg" alt="">
+                  </div>
+                  <div class="Git">
+                    <img src="img/git-scm-icon.svg" alt="git">
+                  </div>
+                  <div class="English">
+                    <img src="img/united-kingdom.svg" alt="Union Jack">
+                  </div>
                 </div>
               </div>
             </div>
