--- a/index.html
+++ b/index.html
@@ -277,71 +277,64 @@
       </div>
       <div class="slide four" id="Slide four">
         <section class="Skills">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="img/lastelle.png" alt="lastouille" style="width:100%;height:100%;">
-              </div>
-              <div class="flip-card-back">
-                <div class="container">
-                  <div class="HTML">
-                    <img src="img/HTML vector.svg" alt="html">
-                  </div>
-                  <div class="CSS">
-                    <img src="img/CSS vector.svg" alt="css">
-                  </div>
-                  <div class="JS">
-                    <img src="img/javascript.svg" alt="">
-                  </div>
-                  <div class="Wordpress">
-                    <img src="img/wordpress.svg" alt="wordpresss">
-                  </div>
-                  <div class="Pack-Office">
-                    <img src="img/icons8-office-365.svg" alt="Pack Office">
-                  </div>
-                  <div class="Visual-Code">
-                    <img src="img/icons8-visual-studio-code-2019.svg" alt="visual code">
-                  </div>
-                  <div class="Photoshop">
-                    <img src="img/icons8-adobe-photoshop.svg" alt="photoshop">
-                  </div>
-                  <div class="Canva">
-                    <img src="img/canva-1.svg" alt="">
-                  </div>
-                  <div class="Figma">
-                    <img src="img/figma-icon.svg" alt="">
-                  </div>
-                  <div class="Git">
-                    <img src="img/git-scm-icon.svg" alt="git">
-                  </div>
-                  <div class="English">
-                    <img src="img/united-kingdom.svg" alt="Union Jack">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
 
-          <div class="flip-card2">
-            <div class="flip-card-inner2">
-              <div class="flip-card-front2">
-                <img src="img/crever.png" alt="" style="width:100%;height:100%;">
+          <div class="flip-card-3D-wrapper">
+              <div id="flip-card">
+                <div class="flip-card-front">
+                  <div class="container">
+                    <div class="HTML">
+                      <img src="img/HTML vector.svg" alt="html">
+                    </div>
+                    <div class="CSS">
+                      <img src="img/CSS vector.svg" alt="css">
+                    </div>
+                    <div class="JS">
+                      <img src="img/javascript.svg" alt="">
+                    </div>
+                    <div class="Wordpress">
+                      <img src="img/wordpress.svg" alt="wordpresss">
+                    </div>
+                    <div class="Pack-Office">
+                      <img src="img/icons8-office-365.svg" alt="Pack Office">
+                    </div>
+                    <div class="Visual-Code">
+                      <img src="img/icons8-visual-studio-code-2019.svg" alt="visual code">
+                    </div>
+                    <div class="Photoshop">
+                      <img src="img/icons8-adobe-photoshop.svg" alt="photoshop">
+                    </div>
+                    <div class="Canva">
+                      <img src="img/canva-1.svg" alt="">
+                    </div>
+                    <div class="Figma">
+                      <img src="img/figma-icon.svg" alt="">
+                    </div>
+                    <div class="Git">
+                      <img src="img/git-scm-icon.svg" alt="git">
+                    </div>
+                    <div class="English">
+                      <img src="img/united-kingdom.svg" alt="Union Jack">
+                    </div>
+                </div>
+                <button id="flip-card-btn-turn-to-back" >Savoir Être</button>
               </div>
-              <div class="flip-card-back2">
-                <ul>
-                  <li>Communication Écrite</li>
-                  <li>Travail en Équipe</li>
-                  <li>Gestion de Conflit</li>
-                  <li>Respect & Politesse</li>
-                  <li>Acceptation des Feedbacks</li>
-                  <li>Responsabilité & Intégrité</li>
-                  <li>Volonté d'Apprendre</li>
-                  <li>Curiosité</li>
-                  <li>Créativité</li>
+                <div class="flip-card-back">
+                  <ul id="soft">
+                    <li>Communication Écrite</li>
+                    <li>Travail en Équipe</li>
+                    <li>Gestion de Conflit</li>
+                    <li>Respect & Politesse</li>
+                    <li>Acceptation des Feedbacks</li>
+                    <li>Responsabilité & Intégrité</li>
+                    <li>Volonté d'Apprendre</li>
+                    <li>Curiosité</li>
+                    <li>Créativité</li>
                 </ul>
-              </div>
+                <button id="flip-card-btn-turn-to-front">Savoir Faire</button>
+              </div>            
             </div>
-          </div>
+          </div>        
+          
           <!--?xml version="1.0" encoding="utf-8"?-->
           <!-- Generator: Adobe Illustrator 27.7.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <!--?xml version="1.0" encoding="utf-8"?-->
