--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 data-sub-html="<h4>Photo by - Monnier Maxence</h4> <p> Location - <a href='https://unsplash.com/s/photos/fushimi-inari-taisha-shrine-senbontorii%2C-68%E7%95%AA%E5%9C%B0-fukakusa-yabunouchicho%2C-fushimi-ward%2C-kyoto%2C-japan'>Fushimi Ward, Kyoto, Japan</a></p>">
                 <img class="img-fluid" src="img/Fatzilla.png" />
               </a>
-              <!-- <a data-lg-size="1443-1329" class="gallery-item"
+              <a data-lg-size="1443-1329" class="gallery-item"
                 data-src="https://images.unsplash.com/photo-1563502310703-1ffe473ad66d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1443&q=80"
                 data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@asoshiation' >Shah </a></h4><p> Location - <a href='https://unsplash.com/s/photos/shinimamiya%2C-osaka%2C-japan'>Shinimamiya, Osaka, Japan</a></p>">
                 <img class="img-fluid"
@@ -173,7 +173,7 @@
                 data-sub-html="<h4>Photo by - <a href='https://unsplash.com/@katherine_xx11' >Katherine Gu </a></h4><p> For all those years we were alone and helpless.</p>">
                 <img class="img-fluid"
                   src="https://images.unsplash.com/photo-1613541444699-39429d990353?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=240&q=80" />
-              </a> -->
+              </a>
             </div>
           </div>
           <svg version="1.1" id="Calque_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -213,29 +213,29 @@
         <section class="Formations">
         </section>
         <section class="Expériences">
-          <div id="timeline-content">
+          <div id="timeline-content" >
             <ul class="timeline">
-              <li class="event" data-date="2022 - Aujourd'hui">
+              <li class="event" class="eventG" data-date="2022 - Aujourd'hui">
 
                 <h3>Employé Polyvalent • Atelier Numérique.</h3>
 
                 <p>Exploration du numérique et du développement web à l'Atelier Numérique d'Ageval.</p>
               </li>
-              <li class="event" data-date="2021-2022">
+              <li class="event" class="eventD" data-date="2021-2022">
 
                 <h3>Aide Informatique • Service Civique.</h3>
 
                 <p>Médiateur Numérique pour le Pôle Emploi de Condé-sur-l'Escaut.</p>
               </li>
-              <li class="event" id="date" data-date="2019 - Aujourd'hui">
+              <li class="event" class="eventG" class="eventG" id="date" data-date="2019 - Aujourd'hui">
                 <h3>Modérateur • Bénévolat.</h3>
                 <p>Modérateur, Médiateur Social d'une communauté internationale en ligne, exclusivement en Anglais.</p>
               </li>
 
-              <li class="event" data-date="2018-2020">
+              <li class="event" class="eventD" data-date="2018-2020">
                 <h3>Licence LLCER Anglais.</h3>
                 <p>Université Lille 3.</p>
-                <li class="event" data-date="2018">
+                <li class="event" class="eventG" data-date="2018">
                   <h3>Obtention du Baccalauréat.</h3>
                   <p>Spécialité Littéraire, option Anglais Renforcé.</p>
 
