--- a/index english.html
+++ b/index english.html
@@ -319,15 +319,15 @@
                 </div>
                   <div class="flip-card-back">
                     <ul id="soft">
-                      <li>Communication Écrite</li>
-                      <li>Travail en Équipe</li>
-                      <li>Gestion de Conflit</li>
-                      <li>Respect & Politesse</li>
-                      <li>Acceptation des Feedbacks</li>
-                      <li>Responsabilité & Intégrité</li>
-                      <li>Volonté d'Apprendre</li>
-                      <li>Curiosité</li>
-                      <li>Créativité</li>
+                      <li>Responsibility & Integrity</li>
+                      <li>Written Communication</li>
+                      <li>Conflict Management</li>
+                      <li>Feedback Acceptance</li>
+                      <li>Respect & Politeness</li>
+                      <li>Will to Improve</li>
+                      <li>Creativity</li>
+                      <li>Curiosity</li>
+                      <li>Teamwork</li>
                   </ul>
                   <button id="flip-card-btn-turn-to-front">Hard Skills</button>
                 </div>            
