--- a/index.html
+++ b/index.html
@@ -321,15 +321,14 @@
               </div>
                 <div class="flip-card-back">
                   <ul id="soft">
-                    <li>Communication Écrite</li>
-                    <li>Travail en Équipe</li>
-                    <li>Gestion de Conflit</li>
-                    <li>Respect & Politesse</li>
-                    <li>Acceptation des Feedbacks</li>
                     <li>Responsabilité & Intégrité</li>
-                    <li>Volonté d'Apprendre</li>
-                    <li>Curiosité</li>
+                    <li>Acceptation des Feedbacks</li>
+                    <li>Volonté de s'Améliorer</li>
+                    <li>Respect & Politesse</li>
+                    <li>Gestion de Conflit</li>
+                    <li>Travail en Équipe</li>
                     <li>Créativité</li>
+                    <li>Curiosité</li>
                   </ul>
                 <button id="flip-card-btn-turn-to-front">Savoir Faire</button>
               </div>            
