--- a/index english.html
+++ b/index english.html
@@ -312,7 +312,7 @@
                       </div>
                       <div class="English">
                         <img src="img/united-kingdom.svg" alt="Union Jack">
-                        <div class="text-logo">Anglais Niveau C2</div>
+                        <div class="text-logo">Fluent in English</div>
                       </div>
                   </div>
                   <button id="flip-card-btn-turn-to-back" >Soft Skills</button>
